# AppliedRoboticsStudentInterface

./: .gitignore  CMakeLists.txt  README.md  intrinsic_calibration_chess2.5.xml
doc/html/: annotated.html  classDubinsProblem-members.html  classDubinsProblem.html  classes.html  collisionDetectionModule_8cpp.html  collisionDetectionModule_8cpp__incl.map  collisionDetectionModule_8cpp__incl.md5  collisionDetectionModule_8hpp.html  collisionDetectionModule_8hpp__dep__incl.map  collisionDetectionModule_8hpp__dep__incl.md5  collisionDetectionModule_8hpp__incl.map  collisionDetectionModule_8hpp__incl.md5  collisionDetectionModule_8hpp_source.html  dir_000001_000000.html  dir_68267d1309a1af8e8297ef4c3efbcdba.html  dir_d44c64559bbebec7f509842c48db8b23.html  dubins_8cpp.html  dubins_8cpp__incl.map  dubins_8cpp__incl.md5  dubins_8hpp.html  dubins_8hpp__dep__incl.map  dubins_8hpp__dep__incl.md5  dubins_8hpp__incl.map  dubins_8hpp__incl.md5  dubins_8hpp_source.html  extrinsicCalib_8cpp.html  extrinsicCalib_8cpp__incl.map  extrinsicCalib_8cpp__incl.md5  extrinsicCalib_8hpp.html  extrinsicCalib_8hpp__dep__incl.map  extrinsicCalib_8hpp__dep__incl.md5  extrinsicCalib_8hpp__incl.map  extrinsicCalib_8hpp__incl.md5  extrinsicCalib_8hpp_source.html  files.html  functions.html  functions_func.html  functions_vars.html  globals.html  globals_defs.html  (+70 more)
doc/latex/: annotated.tex  classDubinsProblem.tex  collisionDetectionModule_8cpp.tex  collisionDetectionModule_8cpp__incl.md5  collisionDetectionModule_8hpp.tex  collisionDetectionModule_8hpp__dep__incl.md5  collisionDetectionModule_8hpp__incl.md5  dir_68267d1309a1af8e8297ef4c3efbcdba.tex  dir_d44c64559bbebec7f509842c48db8b23.tex  dubins_8cpp.tex  dubins_8cpp__incl.md5  dubins_8hpp.tex  dubins_8hpp__dep__incl.md5  dubins_8hpp__incl.md5  extrinsicCalib_8cpp.tex  extrinsicCalib_8cpp__incl.md5  extrinsicCalib_8hpp.tex  files.tex  (+40 more)
include/: collisionDetectionModule.hpp  dubins.hpp  extrinsicCalib.hpp  imageManager.hpp  mapProcessing.hpp  matplotlibcpp.h  pathPlanning.hpp  probabilisticRoadMap.hpp  utils.hpp
src/: calib_config.xml  collisionDetectionModule.cpp  dubins.cpp  extrinsicCalib.cpp  imageManager.cpp  mapProcessing.cpp  pathPlanning.cpp  probabilisticRoadMap.cpp  student_interface.cpp  utils.cpp
(+56 files in other folders)
